update gulp and add import sample

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,11 +1,29 @@
-.top {
+@import "variable";
+@import "reset";
+
+.header {
     height: 100px;
     background-color: black;
+    font-size: $font-l;
     .logo {
         color: white;
         &:hover{
             cursor: pointer;
             color: blue;
         }
+    }
+}
+
+.body {
+    .content {
+        width: $container-width;
+        font-size: $font-m;
+    }
+}
+
+
+.footer {
+    .continaer {
+        width: $container-width;
     }
 }
