--- a/src/css/layout/_layout.scss
+++ b/src/css/layout/_layout.scss
@@ -1,1 +1,12 @@
-$container-width: 960px;
+.l-container {
+    width: 72%;
+    margin: 0 auto;
+}
+
+.l-container--left {
+    margin-left: 14%;
+}
+
+.l-container--right {
+    margin-right: 14%;
+}
