--- a/src/css/utils/_fonts.scss
+++ b/src/css/utils/_fonts.scss
@@ -14,6 +14,9 @@ $font-sizes: (
   6: $h6-font-size
 ) !default;
 
+$caption-size: 16px;
+
+
 $font-weight-lighter:         200 !default;
 $font-weight-light:           300 !default;
 $font-weight-normal:          400 !default;
