--- a/src/css/layout/_navbar.scss
+++ b/src/css/layout/_navbar.scss
@@ -1,8 +1,90 @@
+@use "../utils/colors" as v;
+@use "../utils/mixin" as m;
+
 .navbar {
     display: flex;
     align-items: center;
+    width: 40%;
+    justify-content: space-between;
     &__item {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        width: 90px;
+        height: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        &__zh {
+            font-size: 16px;
+        }
+        &__en {
+            font-size: 14px;
+        }
+        &:hover {
+            &::before{
+                content: "";
+                display: block;
+                width: 8px;
+                height: 8px;
+                border-radius: 50%;
+                background-color: v.$hover-color;
+                position: absolute;
+                top: 15px;
+            }
+            + .navbar__menu {
+                display: flex;
+            }
+        }
+    }
+    &__menu {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 150px;
+        background-color: white;
+        opacity: 0.8;
+        top: 80px;
+        left: 0;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0 25%;
+        &:hover {
+            display: flex;
+        }
+        &__item {
+            width: 12%;
+            height: 0;
+            padding-top: 12%;
+        }
+        &__item--meal {
+            @include m.img-fill("../img/icon/meal.png");
+            &:hover {
+                background-image: url("../img/icon/meal--hover.png");
+            }
+        }
+        &__item--drink {
+            @include m.img-fill("../img/icon/drink.png");
+            &:hover {
+                background-image: url("../img/icon/drink--hover.png");
+            }
+        }
+        &__item--snack {
+            @include m.img-fill("../img/icon/snack.png");
+            &:hover {
+                background-image: url("../img/icon/snack--hover.png");
+            }
+        }
+        &__item--souvenir {
+            @include m.img-fill("../img/icon/souvenir.png");
+            &:hover {
+                background-image: url("../img/icon/souvenir--hover.png");
+            }
+        }
+        &__vector {
+            width: 1px;
+            background-color: #c4c4c4;
+            padding-top: 12%;           
+        }
     }
 }
