--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -8,6 +8,9 @@
         @include m.img-replace-text("../img/logo.png");
         width: 160px;
         height: 90px;
+        &:hover {
+            cursor: pointer;
+        }
     }
     &__iconbar {
         display: flex;
