--- a/src/css/layout/_navbar.scss
+++ b/src/css/layout/_navbar.scss
@@ -22,6 +22,7 @@
             font-size: 14px;
         }
         &:hover {
+            cursor: pointer;
             &::before{
                 content: "";
                 display: block;
@@ -39,11 +40,12 @@
     }
     &__menu {
         display: none;
+        z-index: 1;
         position: absolute;
         width: 100%;
         height: 150px;
         background-color: white;
-        opacity: 0.8;
+        opacity: 0.9;
         top: 80px;
         left: 0;
         justify-content: space-around;
