--- a/src/css/utils/_fonts.scss
+++ b/src/css/utils/_fonts.scss
@@ -29,7 +29,7 @@ $line-height-lg:              1.6 !default;
 
 
 // @font-face {
-//     font-family: 'Noto Sans TC';
+//     font-family: 'Noto Serif TC';
 //     src: url('../vendors/fonts/NotoSansTC-Regular.otf');
 //     src: url('../vendors/fonts/NotoSansTC-Regular.otf') format('opentype');
 //     font-style: normal;
@@ -37,4 +37,4 @@ $line-height-lg:              1.6 !default;
 //     font-display: swap
 // }
 
-$font-family: 'Noto Sans Tc', Times, "Times New Roman", Georgia, serif;
+$font-family: 'Noto Serif TC', Times, "Times New Roman", Georgia, serif;
