--- a/src/css/utils/_mixin.scss
+++ b/src/css/utils/_mixin.scss
@@ -12,3 +12,13 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
+
+@mixin clear-float {
+    overflow: hidden;
+}
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
