--- a/src/css/utils/_colors.scss
+++ b/src/css/utils/_colors.scss
@@ -1,4 +1,5 @@
 $primary-color: #769763;
-$hover-color: #F1D675;
-$title-color: #737373;
-$text-color: #c4c4c4;
+$sub-color: #F1D675;
+$text-color: #737373;
+$sub-text-color: #c4c4c4;
+$background-color: white;
