--- a/src/css/utils/_mixin.scss
+++ b/src/css/utils/_mixin.scss
@@ -22,3 +22,10 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin img-zoom($duration, $scale) {
+    transition: transform $duration;
+    &:hover {
+        transform: scale($scale);
+    }
+}
