--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -6,11 +6,11 @@
     margin: 0 auto;
 }
 
-.l-container--left {
+.l-container-left {
     margin-left: 14%;
 }
 
-.l-container--right {
+.l-container-right {
     margin-right: 14%;
 }
 
