--- a/src/css/components/_menuList.scss
+++ b/src/css/components/_menuList.scss
@@ -5,13 +5,14 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    align-items: baseline;
     color: c.$text-color;
     &__item {
-        width: calc(100% - 8px);
         height: 60px;
         display: flex;
         align-items: center;
-        box-shadow: 0px 1px 0px #C4C4C4;
+        border-bottom: 1px solid #c4c4c4;
+        white-space: nowrap;
         &:hover {
             color: c.$primary-color;
         }
@@ -25,7 +26,7 @@
             margin-right: 16px;
         }
         &:last-child{
-            box-shadow: unset;
+            border-bottom: unset;
         }
     }
 }
