index page complete and structure

--- a/src/css/utils/_variables.scss
+++ b/src/css/utils/_variables.scss
@@ -13,4 +13,7 @@ $grid-breakpoints: (
   xxl: 1400px
 );
 
-$grid-divide-units: 5, 10, 12;
+
+$grid-divide-units: 10, 12;
+
+$img-border-radius: 5px;
