--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,6 +1,7 @@
 @use "../utils/mixin" as m;
 @use "../utils/colors" as c;
 @use "../utils/fonts" as f;
+@use "../utils/variables" as v;
 
 .banner {
     position: relative;
@@ -80,7 +81,7 @@
             width: 200px;
             height: 300px;
             margin-left: 16px;
-            border-radius: 5px;
+            border-radius: v.$img-border-radius;
             &--01 {
                 @include m.img-fill("../img/index_explore/explore_01.jpeg")
             }
@@ -171,6 +172,7 @@
     &__img {
         @include m.img-fill("../img/Subscribe.jpeg");
         height: 300px;
+        border-radius: v.$img-border-radius;
     }
     &__txtWrapper {
         line-height: f.$line-height-lg;
@@ -182,6 +184,34 @@
         }
         &__content {
             color: rgba(255, 255, 255, 0.5);
+        }
+    }
+    &__inputWrapper {
+        padding: 25px;
+        border: 1px solid c.$sub-text-color;
+        border-radius: v.$img-border-radius;
+        margin-top: 25px;
+        display: flex;
+        &__input {
+            border: none;
+            background-color: unset;
+            color: white;
+            width: 94%;
+            &:focus {
+                outline: none;
+            }
+            &::placeholder {
+                color: rgba(255, 255, 255, 0.5);
+            }
+        }
+        &__img {
+            width: 6%;
+            padding-bottom: 6%;
+            @include m.img-fill("../img/icon/send.png");
+            &:hover {
+                background-image: url("../img/icon/send--hover.png");
+                cursor: pointer;
+            }
         }
     }
 }
