--- a/src/css/utils/_colors.scss
+++ b/src/css/utils/_colors.scss
@@ -2,4 +2,6 @@ $primary-color: #769763;
 $sub-color: #F1D675;
 $text-color: #737373;
 $sub-text-color: #c4c4c4;
+
 $background-color: white;
+$footer-background-color: #FAFAFA;;
