--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -5,14 +5,18 @@
     width: 72%;
     margin: 0 auto;
 }
-
 .l-container-left {
     margin-left: 14%;
 }
-
 .l-container-right {
     margin-right: 14%;
 }
+//150px is the value which add header and footer height
+.l-content {
+    height: calc(100% - 150px);
+    display: flex;
+}
+
 
 .l-row {
     width: 100%;
