--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     position: relative; // this setting is for navbar__menu as position anchor
+    box-shadow: 0px 0.5px 0px rgba(196, 196, 196, 0.3);
     &__logo {
         @include m.img-replace-text("../img/logo.png");
         width: 160px;
