--- a/src/css/utils/_mixin.scss
+++ b/src/css/utils/_mixin.scss
@@ -29,3 +29,12 @@
         transform: scale($scale);
     }
 }
+
+@mixin hide-scroll {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
