--- a/src/css/layout/_grid.scss
+++ b/src/css/layout/_grid.scss
@@ -16,12 +16,21 @@
     height: calc(100% - 150px);
     display: flex;
 }
-
-
 .l-row {
     width: 100%;
     display: flex;
     margin: 24 0;
+}
+.l-list {
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: hidden;
+    justify-content: space-between;
+    .l-list-item-3 {
+        margin-right: 1%;
+        width: 32.33%;
+        height: 500px;
+    }
 }
 
 @each $unit in v.$grid-divide-units {
