--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -22,45 +22,13 @@
             background-color: white;
         }
     }
-    &__search {
+    .searchInput {
         position: absolute;
         width: 30%;
-        padding: 8px 16px;
-        background-color: white;
-        border-radius: 5px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         left: 0;
         right: 0;
         margin: 0 auto;
         bottom: 140px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        &__icon {
-            width: 20px;
-            height: 20px;
-            @include m.img-fill("../img/icon/search.png");
-        }
-        &__input {
-            border: none;
-            font-size: 16px;
-            width: 80%;
-            border-radius: 5px;
-            &:focus {
-                outline: none;
-            }
-        }
-        &__btn {
-            background-color: unset;
-            font-size: 14px;
-            color: c.$primary-color;
-            border-radius: 20px;
-            border: 1px solid c.$primary-color;
-            &:hover {
-                color: c.$sub-color;
-                border-color: c.$sub-color;
-            }
-        }
     }
 }
 
