--- a/src/css/layout/_sidebar.scss
+++ b/src/css/layout/_sidebar.scss
@@ -8,6 +8,7 @@
     width: v.$sidebar-width;
     touch-action: pan-y;
     height: 100%;
+    overflow-y: auto;
     &__mainSearch {
         padding: 24px;
         border-bottom: 2px solid #c4c4c4;
