--- a/src/css/pages/_search.scss
+++ b/src/css/pages/_search.scss
@@ -10,9 +10,13 @@
 }
 
 .searchFilter {
+    height: 15%;
+    display: flex;
     align-items: center;
-    height: 10%;
-    margin: unset;
+    > .l-row {
+        align-items: center;
+        margin: unset;
+    }
     &__sortWrapper {
         padding-left: 30px;
         display: flex;
@@ -55,7 +59,7 @@
 }
 
 .itemList {
-    height: 90%;
+    height: 85%;
     overflow-y: auto;
     @include m.hide-scroll;
 }
