--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -1,8 +1,12 @@
 @use "../utils/fonts" as f; 
 @use "../utils/colors" as c;
+@use "../utils/breakpoinst" as b;
 
 html {
     font-size: 16px;
+    @include b.media-breakpoint-down(xl){
+        font-size: 12px;
+    }
 }
 
 body {
