--- a/src/css/components/_card.scss
+++ b/src/css/components/_card.scss
@@ -1,6 +1,7 @@
 @use "../utils/colors" as c;
 @use "../utils/fonts" as f;
 @use "../utils/mixin" as m;
+@use "../utils/breakpoinst" as b;
 
 .card{
     background-color: c.$background-color;
@@ -8,7 +9,7 @@
     border-radius: 5px;
     width: 252px;
     &__img {
-        width: 250px;
+        width: 100%;
         height: 170px;
     }
     &__title {
@@ -41,5 +42,8 @@
                 background-image: url("../img/icon/like--fill.png");
             }
         }
+    }
+    @include b.media-breakpoint-down(lg) {
+        width: 220px;
     }
 }
