--- a/src/css/utils/_breakpoinst.scss
+++ b/src/css/utils/_breakpoinst.scss
@@ -128,3 +128,42 @@
     }
   }
   
+//------------------------------------------------------------------------
+
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@mixin sm {
+  @media (min-width: 576px) {
+      @content;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@mixin md {
+  @media (min-width: 768px) {
+      @content;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@mixin lg {
+  @media (min-width: 769px) {
+      @content;
+  }
+  
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@mixin xl {
+  @media (min-width: 1200px) {
+      @content;
+  }
+}
+// XX-Large devices (larger desktops, 1400px and up)
+@mixin xll {
+  @media (min-width: 1400px) {
+      @content;
+  }
+}
